# api-bgrm

./: .env  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  setup.cfg
.github/workflows/: deploy.yml  tests.yml
app/: main.py
app/api/acetona/: bg.py  session_cloth.py  session_factory.py  simple_factory.py  simple_session.py
app/api/db/migrations/: env.py
app/api/db/migrations/versions/: 049b45476539_create_logs_table.py
app/api/db/queries/: queries.py  queries.pyi  tables.py
app/api/db/queries/sql/: users.sql
app/api/db/repositories/: users.py
app/api/dependencies/: database.py
app/api/domain/: model.py  users.py
app/api/logic/: image.py  user.py
app/api/miope/: blur.py
app/api/routes/: api.py  bg_remover.py  image.py  users.py
app/api/services/: jwt.py  security.py
app/api/types/: models.py
app/core/: events.py  logging.py
app/core/settings/: app.py  development.py  production.py  test.py
scripts/: test
tests/: conftest.py
tests/test_api/: test_users.py
