[tool.poetry]
name = "API"
version = "0.0.1"
description = "API"
authors = ["ignets"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.9.1"
pypika = "^0.48.8"
python-slugify = "^5.0"
unidecode = "^1.3"
loguru = "^0.5.1"
pydantic = "^1.9.0"
python-dotenv = "^0.19.2"
asyncpg = "^0.25.0"
psycopg2-binary = "^2.9.3"
psycopg2 = "^2.9.3"
aiosql = "^3.4.1"
fastapi = "^0.68.0"
alembic = "^1.7.7"
uvicorn = "^0.17.6"
passlib = "^1.7.4"
PyJWT = "^2.4.0"
bcrypt = "^3.2.2"
Pillow = "^9.1.1"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
isort = "^5.9"
autoflake = "^1.4"
mypy = "^0.910"
flake8-fixme = "^1.1"
pytest = "^6.2"
pytest-cov = "^2.12"
pytest-asyncio = "^0.15.1"
pytest-env = "^0.6.2"
pytest-xdist = "^2.4.0"
httpx = "^0.19.0"
asgi-lifespan = "^1.0.1"
wemake-python-styleguide = "^0.16.1"

[tool.isort]
profile = "black"
src_paths = ["app", "tests"]
combine_as_imports = true

[tool.pytest.ini_options]
testpaths = "tests"
filterwarnings = "error"
# addopts = '''
#   --strict-markers
#   --tb=short
#   --cov=app
#   --cov=tests
#   --cov-branch
#   --cov-report=term-missing
#   --cov-report=html
#   --cov-report=xml
#   --no-cov-on-fail
#   --cov-fail-under=100
#   --numprocesses=auto
# '''

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
